Details on links, ref and more

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section id="hero" class="hero">
         <div class="hero-image">
             <img src="/resources/hero.png" alt="Hero Image" class="hero-img">
         </div>
@@ -140,7 +140,7 @@
     </section>
 
     <!-- Specialties Section -->
-    <section class="specialties">
+    <section id="specialties" ="specialties">
         <h2>Especialidades</h2>
         
         <div class="specialties-grid">
@@ -177,7 +177,7 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section class="testimonials">
+    <section id="testimonials" class="testimonials">
         <h2>Algunos Testimonios</h2>
         
         <div class="testimonial-carousel">
@@ -217,7 +217,7 @@
     </section>
 
     <!-- Blog Section -->
-    <section class="blog">
+    <section id="blog" class="blog">
         <div class="blog-header">
             <div>
                 <h2>Blog</h2>
@@ -290,24 +290,24 @@
                         <img src="/resources/logo_shiba.png" alt="Logo" class="logo-icon">
                         <span>Clínica Shiba</span>
                     </div>
-                    <p>(204) 541-9853</p>
-                    <p>2012 West Avenue, San Diego, CA 92122</p>
+                    <p>(601) 123456</p>
+                    <p>2025 Pontificia Universidad Javeriana </p>
                 </div>
 
                 <div class="footer-column">
                     <h3>Servicios</h3>
                     <ul>
-                        <li><a href="#">Especialidades</a></li>
-                        <li><a href="#">Urgencias</a></li>
-                        <li><a href="#">Veterinarios</a></li>
+                        <li><a href="#specialties">Especialidades</a></li>
+                        <li><a href="#hero">Urgencias</a></li>
+                        <li><a href="#hero">Veterinarios</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-column">
                     <h3>Sobre Nosotros</h3>
                     <ul>
-                        <li><a href="#">Reseñas</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="#testimonials">Reseñas</a></li>
+                        <li><a href="#blog">Blog</a></li>
                     </ul>
                 </div>
 
