fixed specialties error and fixed stars in testimonials

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     </section>
 
     <!-- Specialties Section -->
-    <section id="specialties" ="specialties">
+    <section id="specialties" class="specialties">
         <h2>Especialidades</h2>
         
         <div class="specialties-grid">
